// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Overlay /> snapshot should match snapshot 1`] = `
<Overlay>
  <div
    className="md-overlay-wrapper"
    data-color="primary"
    data-fullscreen={false}
  />
</Overlay>
`;

exports[`<Overlay /> snapshot should match snapshot with className 1`] = `
<Overlay
  className="example-class"
>
  <div
    className="example-class md-overlay-wrapper"
    data-color="primary"
    data-fullscreen={false}
  />
</Overlay>
`;

exports[`<Overlay /> snapshot should match snapshot with color 1`] = `
<Overlay
  color="secondary"
>
  <div
    className="md-overlay-wrapper"
    data-color="secondary"
    data-fullscreen={false}
  />
</Overlay>
`;

exports[`<Overlay /> snapshot should match snapshot with fullscreen 1`] = `
<Overlay
  fullscreen={true}
>
  <div
    className="md-overlay-wrapper"
    data-color="primary"
    data-fullscreen={true}
  />
</Overlay>
`;

exports[`<Overlay /> snapshot should match snapshot with id 1`] = `
<Overlay
  id="example-id"
>
  <div
    className="md-overlay-wrapper"
    data-color="primary"
    data-fullscreen={false}
    id="example-id"
  />
</Overlay>
`;

exports[`<Overlay /> snapshot should match snapshot with style 1`] = `
<Overlay
  style={
    {
      "color": "pink",
    }
  }
>
  <div
    className="md-overlay-wrapper"
    data-color="primary"
    data-fullscreen={false}
    style={
      {
        "color": "pink",
      }
    }
  />
</Overlay>
`;
